@@ -1,5 +1,5 @@
 'use strict'
-const TraceParent = require('traceparent')
+const { TraceParent } = require('./traceparent')
 const TraceState = require('./tracestate')
 
 class TraceContext {
