@@ -12,7 +12,7 @@ const agent = require('../..').start({
 const tape = require('tape')
 const TraceContext = require('../../lib/tracecontext')
 const TraceState = require('../../lib/tracecontext/tracestate')
-const TraceParent = require('traceparent')
+const { TraceParent } = require('../../lib/tracecontext/traceparent')
 
 tape.test('propagateTraceContextHeaders tests', function (suite) {
   suite.test('Span test', function (t) {
